testsuite/poke.pkl/assert-diag-4.pk
/* { dg-do compile } */

assert (1#B);  /* { dg-error "" } */
